# my_mirror_on_cloud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  environment-dev.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tool.ruff
notebooks/: demo-catalog-access.ipynb  demo-catalog-search.ipynb  download_models.ipynb  exploration_farfetch.ipynb  exploration_fashionclip.ipynb  exploration_h&m.ipynb  exploration_text_vector_search.ipynb  test_vector_store.ipynb  testing_embedding_manager.ipynb  testing_text_generation.ipynb  testing_vector_store.ipynb  testing_weaviate_manager.ipynb  tests_farfetch.ipynb  tests_h&m.ipynb  tests_text_vector_search.ipynb
scripts/: demo-catalog-search.ipynb  requirements-dev.txt  update_catalogue_HM.py
src/my_mirror_on_cloud/: catalogue_search.py  catvton_caller.py  client_query_manager.py  embedding_manager.py  encode_query.py  manage_language.py  params.py  pipeline.py  query_processor.py  resume_client_query.py  streamlit_pipeline.py  text_generation.py  utils.py  vector_store.py  weaviate_manager.py
tags/: tags_v1.pkl
webapp/: app.py  requirements.txt
webapp/modules/: chatbot.py  page1.py  page2.py
webapp/scripts/: load_image.py
