[project]
name = "my-mirror-on-cloud"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.11"
pre-commit = "^4.3.0"
mkdocs = "^1.6.1"
ipykernel = "^6.30.1"
nbstripout = "^0.8.1"
codespell = "^2.4.1"
